force-app/main/default/objects/Material__c/fields/AccountingClassificationGroup__c.field-meta.xml
<CustomField>
    <fullName>AccountingClassificationGroup__c</fullName>
    <label>Grupo de Classificação contábil-Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>