force-app/main/default/objects/Material__c/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <label>Setor Atividade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>