force-app/main/default/objects/Material__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <label>Descrição Longa</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>