force-app/main/default/objects/Material__c/fields/MaterialType__c.field-meta.xml
<CustomField>
    <fullName>MaterialType__c</fullName>
    <label>Tipo de Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>