force-app/main/default/objects/Material__c/fields/PackingMaterialGroup__c.field-meta.xml
<CustomField>
    <fullName>PackingMaterialGroup__c</fullName>
    <label>Grupo de materiais material de embalagem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>