force-app/main/default/objects/Material__c/fields/RatingClass__c.field-meta.xml
<CustomField>
    <fullName>RatingClass__c</fullName>
    <label>Classe de Avaliação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>