force-app/main/default/objects/Material__c/fields/SAPCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>SAPCreatedDate__c</fullName>
    <label>Data Criação SAP</label>
    <type>Date</type>
</CustomField>