force-app/main/default/objects/Material__c/fields/SAPLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>SAPLastModifiedDate__c</fullName>
    <label>Data Última Modificação SAP</label>
    <type>Date</type>
</CustomField>