force-app/main/default/objects/Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrg__c</columns>
    <columns>DistributionChannel__c</columns>
    <columns>MaterialType__c</columns>
    <columns>ShortDescription__c</columns>
    <columns>PackingMaterialGroup__c</columns>
    <columns>RatingClass__c</columns>
    <columns>AccountingClassificationGroup__c</columns>
    <columns>ActivitySector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>